--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,22 @@
 .calculator {
     width: 350px;
     height: 350px;
+    border-radius: 350px;
     border: 2px solid black;
-    margin: 100px auto 0;
-    text-align: center;
     background-color: #021428;
     box-shadow: 0 0 30px grey;
-    border-radius: 350px;
+    position:absolute;
+    left:50%;
+    top:50%;
+    margin:-175px 0 0 -175px;
+
+}
+
+#qwerty{
+    width: 700px;
+    height: 700px;
+    border: 2px solid black;
+    position: relative;
 }
 
 .calculatorForm {
@@ -52,3 +62,18 @@
     background-color: #528299;
     font-weight: 700;
 }
+
+/*#parent {*/
+    /*width: 500px;*/
+    /*height: 500px;*/
+    /*border: 2px solid black;*/
+    /*position: relative;*/
+/*}*/
+/*#child {*/
+    /*position: absolute;*/
+    /*top: 50%;*/
+    /*left: 50%;*/
+    /*height: 101px;*/
+    /*width: 101px;*/
+    /*margin: -0% auto auto -0%;*/
+/*}*/
